--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -280,7 +280,7 @@ S_B_1 : "🗒 Cᴏᴍᴍᴀɴᴅs"
 S_B_2 : "🔧 Sᴇᴛᴛɪɴɢs"
 S_B_3 : "📨 Sᴜᴘᴘᴏʀᴛ"
 S_B_4 : "📨 Cʜᴀɴɴᴇʟ"
-S_B_5 : "⚜ ᴄʟɪᴄᴋ ʜᴇʀᴇ ᴛᴏ ᴀᴅᴅ ᴍᴇ ɪɴ ʏᴏᴜʀ ɴᴇᴡ ɢʀᴏᴜᴘs ⚜"
+S_B_5 : "⚜ ᴄʟɪᴄᴋ ᴛᴏ ᴀᴅᴅ ᴍᴇ ɪɴ ʏᴏᴜʀ ɴᴇᴡ ɢʀᴏᴜᴘs ⚜"
 S_B_6 : "💡 Gɪᴛ Rᴇᴘᴏ"
 S_B_7 : "👤 Oᴡɴᴇʀ"
 S_B_8 : "🔎 Hᴏᴡ Tᴏ Usᴇ? Cᴏᴍᴍᴀɴᴅ Mᴇɴᴜ"
