--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -275,6 +275,23 @@ UNBAN_BUTTON : "ᴜɴʙᴀɴ ᴀssɪsᴛᴀɴᴛ"
 #Lyrics
 L_B_1 : "🚀 ᴄʜᴇᴄᴋᴏᴜᴛ ʟʏʀɪᴄs ɴᴏᴡ"
 
+# Music Help
+H_B_1 : "Aᴅᴍɪɴ"
+H_B_2 : "Aᴜᴛʜ"
+H_B_3 : "Bʀᴏᴀᴅᴄᴀsᴛ"
+H_B_4 : "Bʟ-Cʜᴀᴛ"
+H_B_5 : "Bʟ-Usᴇʀ"
+H_B_6 : "C-Pʟᴀʏ"
+H_B_7 : "G-Bᴀɴ"
+H_B_8 : "Lᴏᴏᴘ"
+H_B_9 : "Mᴀɪɴᴛᴇɴᴀɴᴄᴇ"
+H_B_10 : "Pɪɴɢ"
+H_B_11 : "Pʟᴀʏ"
+H_B_12 : "Sʜᴜғғʟᴇ"
+H_B_13 : "Sᴇᴇᴋ"
+H_B_14 : "Sᴏɴɢ"
+H_B_15 : "Sᴘᴇᴇᴅ"
+
 # Start
 S_B_1 : "🗒 Cᴏᴍᴍᴀɴᴅs"
 S_B_2 : "🔧 Sᴇᴛᴛɪɴɢs"
